Fix: Diseñar y crear la base de datos con SQL server
Motor de base de datos SQL Server
Definir el esquema de la base de datos con tablas para palabras, jugadores y partidas.

--- a/Web.config
+++ b/Web.config
@@ -9,17 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <!---->
-
-	<system.data>
-		<DbProviderFactories>
-			<remove invariant="MySql.Data.MySqlClient" />
-			<add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-		</DbProviderFactories>
-	</system.data>
-	
-  <connectionStrings>
-    <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=ahorcado_db;Uid=root;Pwd=1234;" />
-  </connectionStrings>
+	<connectionStrings>
+		<add name="DefaultConnection"
+			 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=AhorcadoDB_SQL;Integrated Security=SSPI;"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -85,8 +79,7 @@
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.33.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+     </providers>
   </entityFramework>
   <system.codedom>
     <compilers>
