--- a/Web.config
+++ b/Web.config
@@ -10,9 +10,7 @@
   </configSections>
   <!---->
 	<connectionStrings>
-		<add name="DefaultConnection"
-			 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=AhorcadoDB_SQL;Integrated Security=SSPI;"
-			 providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=AhorcadoDB_SQL;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
