Add: Implementar la funcionalidad "Agregar una palabra nueva al diccionario".
Se creo una interfaz para que el usuario ingrese una nueva palabra.
Se aplicaron validaciones para que la palabra cumpla con los requisitos definidos (longitud, etc.).
Se implementó una validación que no distinga mayúsculas/minúsculas ni tildes para evitar duplicados (ej: arbol vs árbol).
Guardar la palabra con su tilde correspondiente si la tiene.

--- a/Ahorcado-Grupo5.csproj
+++ b/Ahorcado-Grupo5.csproj
@@ -168,10 +168,10 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PalabrasController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AhorcadoContext.cs" />
     <Compile Include="Models\Jugador.cs" />
@@ -256,6 +256,7 @@
     <Content Include="Views\Home\CrearJugador.cshtml" />
     <Content Include="Views\Home\IniciarPartida.cshtml" />
     <Content Include="Views\Home\Partida.cshtml" />
+    <Content Include="Views\Palabras\Crear.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -265,7 +266,6 @@
     <Content Include="Scripts\jquery-3.7.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.1.min.map" />
   </ItemGroup>
-
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
