Arreglo de contador ahorcado con tiempo e intentos nuevamente.

--- a/Ahorcado-Grupo5.csproj
+++ b/Ahorcado-Grupo5.csproj
@@ -200,6 +200,24 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\images\ahorcado_0.png" />
+    <Content Include="Content\images\ahorcado_1.png" />
+    <Content Include="Content\images\ahorcado_2.png" />
+    <Content Include="Content\images\ahorcado_3.png" />
+    <Content Include="Content\images\ahorcado_4.png" />
+    <Content Include="Content\images\ahorcado_5.png" />
+    <Content Include="Content\images\ahorcado_6.png" />
+    <Content Include="Content\images\ahorcado_7.png" />
+    <Content Include="Content\images\avatar1.png" />
+    <Content Include="Content\images\avatar10.png" />
+    <Content Include="Content\images\avatar2.png" />
+    <Content Include="Content\images\avatar3.png" />
+    <Content Include="Content\images\avatar4.png" />
+    <Content Include="Content\images\avatar5.png" />
+    <Content Include="Content\images\avatar6.png" />
+    <Content Include="Content\images\avatar7.png" />
+    <Content Include="Content\images\avatar8.png" />
+    <Content Include="Content\images\avatar9.png" />
     <Content Include="Content\sounds\error-126627.mp3" />
     <Content Include="Content\sounds\purchase-succesful-ingame-230550.mp3" />
     <Content Include="favicon.ico" />
